Multi aggregation (#34)
This PR adds support for sibling top-level OpenSearch aggregations.

Before this change, kaldb effectively assumed a search request had
exactly one top-level
  aggregation. That assumption leaked through several layers:

  - request parsing rejected multiple top-level aggs
- local chunk execution instantiated and returned only one root agg
result
- SearchResult and proto serialization carried the agg payload in a
singular shape
  - query-side reduction merged only one root agg
  - HTTP response rendering assumed one root agg result

This PR removes that assumption and carries the full top-level
aggregation set end to end.

  **What changed**

  - Request parsing
- kaldb no longer rejects requests with multiple sibling top-level aggs.
      - The full top-level aggs object is preserved and parsed into
        AggregatorFactories.Builder.
  - Local execution
- Local chunk search now builds all top-level aggregators, not just one.
- Aggregation execution was simplified so the local path explicitly
carries:
          - the collector Lucene runs
          - the top-level aggregators kaldb finalizes afterward
- This removed the old agg-side CollectorManager / MultiCollectorManager
plumbing and the
need to recover aggregators from generic collector wrappers later.
  - Result transport and reduction
- SearchResult now carries InternalAggregations as the real aggregation
payload.
- Query-side reduction now uses InternalAggregations.topLevelReduce(...)
to merge the
        full top-level aggregation set across partial results.
  - Response rendering
- The HTTP layer now renders the full plural aggregations object instead
of assuming a
        single root aggregation.
 
  Why the local execution refactor is in this PR

Supporting sibling top-level aggregations changed local aggregation
execution from one top-
  level Aggregator to two pieces of runtime state:

  - a combined BucketCollector for Lucene to execute
- the original top-level Aggregators need